--- a/SampleWebApplication/Views/Company/Index.cshtml
+++ b/SampleWebApplication/Views/Company/Index.cshtml
@@ -4,21 +4,32 @@
 
 <h2>Add new company</h2>
 
-@using (Html.BeginForm())
+<div id="success-alert" class="alert alert-success" style="display: none">
+    Item added!
+</div>
+
+<form method="POST">
+    <div class="form-group">
+        <label asp-for="Name">Company name</label>
+        <input asp-for="Name" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Description">Description</label>
+        <input asp-for="Description" class="form-control" />
+    </div>
+
+    <div class="form-check">
+        <input asp-for="IsVisible" class="form-check-input" />
+        <label asp-for="IsVisible" class="form-check-label">Company visible?</label>
+    </div>
+
+    <div class="form-group">
+        <input type="submit" value="Add new item" />
+    </div>
+</form>
+
+@section Scripts 
 {
-    <div class="form-group">
-        @Html.LabelFor(x => x.Name, "Company name")
-        @Html.TextBoxFor(x => x.Name, new {@class = "form_control"})
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(x => x.Description, "Company description")
-        @Html.TextBoxFor(x => x.Description, new {@class = "form_control"})
-    </div>
-    <div class="form-group">
-        @Html.CheckBoxFor(x => x.IsVisible, new {@class = "form-check-input"})
-        @Html.LabelFor(x => x.IsVisible, "Visible?", new {@class = "form-check-label"})
-    </div>
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">Add company</button>
-    </div>
-}
+    <script src="~/js/addNewItem.js"></script>
+} 
